WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161685
Fix the ENABLE(WEBASSEMBLY) build on Linux
https://bugs.webkit.org/show_bug.cgi?id=161685
Summary
Fix the ENABLE(WEBASSEMBLY) build on Linux
Csaba Osztrogonác
Reported
2016-09-07 02:39:01 PDT
Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/wasm/JSWASMModule.cpp.o:JSWASMModule.cpp:function JSC::JSWASMModule::JSWASMModule(JSC::VM&, JSC::Structure*, JSC::JSArrayBuffer*): error: undefined reference to 'JSC::AuxiliaryBarrier<JSC::Butterfly*>::AuxiliaryBarrier<JSC::Butterfly*&>(JSC::VM&, JSC::JSCell*, JSC::Butterfly*&)' We need to include AuxiliaryBarrierInlines.h to fix it. Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/wasm/JSWASMModule.cpp.o:JSWASMModule.cpp:function JSC::JSWASMModule::JSWASMModule(JSC::VM&, JSC::Structure*, JSC::JSArrayBuffer*): error: undefined reference to 'JSC::Heap::ascribeOwner(JSC::JSCell*, void*)' Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/wasm/JSWASMModule.cpp.o:JSWASMModule.cpp:function JSC::JSWASMModule::JSWASMModule(JSC::VM&, JSC::Structure*, JSC::JSArrayBuffer*): error: undefined reference to 'JSC::Heap::writeBarrier(JSC::JSCell const*, JSC::JSCell*)' We need to include HeapInlines.h to fix it.
Attachments
Patch for landing
(1.20 KB, patch)
2016-09-07 02:39 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-09-07 02:39:59 PDT
Created
attachment 288127
[details]
Patch for landing
WebKit Commit Bot
Comment 2
2016-09-07 03:01:22 PDT
Comment on
attachment 288127
[details]
Patch for landing Clearing flags on attachment: 288127 Committed
r205541
: <
http://trac.webkit.org/changeset/205541
>
WebKit Commit Bot
Comment 3
2016-09-07 03:01:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug