Fix the ENABLE(WEBASSEMBLY) build on Linux https://bugs.webkit.org/show_bug.cgi?id=161685

Unreviewed buildfix.


* wasm/JSWASMModule.cpp:


Canonical link: https://commits.webkit.org/179857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205541 268f45cc-cd09-0410-ab3c-d52691b4dbfc